--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         
         <div class="row mt-5">
             <div class="col-12 col-md-6">
-                <img class="img-fluid" src="assets/img/img.PNG" alt="Guitar player">
+                <img class="img-fluid" src="assets/img/img.png" alt="Guitar player">
             </div>
             <div class="col-12 col-md-6">
                 <div class=" registro"><form>
